--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRET_KEY="minorproject";
 PORT=3000
-FRONTEND_URL="https://splitwise-frontend-henna.vercel.app"
+MONGODB_URL=mongodb+srv://SplitWiseDataBase:yDo1ltNWMTBPuRJU@splitwise.wessidq.mongodb.net/
+FRONTEND_URL="http://localhost:5173/"
