--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY="minorproject";
+SECRET_KEY="minorproject"
 PORT=3000
-MONGODB_URL=mongodb+srv://SplitWiseDataBase:yDo1ltNWMTBPuRJU@splitwise.wessidq.mongodb.net/
+MONGODB_URL=mongodb+srv://kushagraptdr18:kushagraptdr18@cluster0.d612y.mongodb.net/
 FRONTEND_URL="http://localhost:5173/"
