--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET_KEY="minorproject"
 PORT=3000
 MONGODB_URL=mongodb+srv://SplitWiseDataBase:yDo1ltNWMTBPuRJU@splitwise.wessidq.mongodb.net/
-FRONTEND_URL="http://localhost:5173/"
+FRONTEND_URL="http://localhost:5173"
